# vocode-health-ai

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  main.py  pyproject.toml
patient_intake_agent/: _transcript_parser_langchain.py  constants.py  conversation_engine.py  events_manager.py  inbound_call_engine.py  sms.py  transcript_parser.py
voice_agent/: _transcript_parser_langchain.py  constants.py  events_manager.py  inbound_call_server.py  logger.py  sms.py  transcript_parser.py
