[tool.poetry]
name = "patient-intake-agent"
version = "0.1.0"
description = ""
authors = ["avardaan <oyevardaan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
twilio = "^8.5.0"
vocode = {version = "0.1.110", extras = ["io"]}
redis = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
